 358710 Tasks has an empty tooltip when idle (Adrian Yee)
 358717 Order of files added to queue (Adrian Yee)
 358211 Get New Headers expands selected collapsed thread (Douglas Bollinger)
 359171 download files with same name -> mangled suffixes (Jerry Segers, Jr.)
 361144 xover tasks should be inserted at the top of the queue (David)

0.115 "Tip Jar"
 358077 cut memory use in half for large binaries groups (Charles)
 358204 20% of group loading time is spent in unnecessary trim() (Charles)
 357863 marking an article unread does not update grouplist. (Christophe)
 349012 header pane's mouse drag-select works in gtk+ 2.10. (Douglas Bollinger)
 358305 make tasks window clearer (Pavel)

0.114 "You'll Have to Go Sideways"
 356805 fix 0.112 - 0.113 lockups. (George Sherwood, Robert Marshall)
 356834 crash: Cannot allocate memory during pthread_create (Axion)
 356023 can't read an article with [XX/XX] in the subject (Artur Jachacy)
 357236 save another 3MB from startup overhead. (Charles)
 356798 save another 2MB from startup overhead. (Charles)
 357073 uninitialized memory errors in body pane. (valgrind)
 357698 new followups mangled quoted non-UTF-8 text. (Artur Jachacy, Christophe)
 356835 display utf-7 text correctly. (Artur Jachacy)
 345838 pan commandline not closing after ctrl-c. (Axion)
 357230 simleys (emoticons) break links (Flammie Pirinen)
 356827 delete attachment when deleting article (Kevin Brammer)

0.113 "0.113 is one of Nakata's favorites"
 356070 News servers not merging properly. (Alen Williams, Adam Huffman)
 356206 crash when deleting messages (David Kelly)
 349044 save settings periodically to safeguard against data loss. (Glyn Parker)
 354405 fix 0.112 Windows 2000 regression. (K Haley)
 356626 Edit/Select Article Body doesn't work. (Lionel Elie Mamane)
 356325 save a little memory. (Charles)
 350530 save-attachments dialog's group prefs radiobutton (Jeff Berman, Walt)
 355335 updated french translation. (Frederic Bezies, Christophe Gisquet)
