@@ -11,6 +11,8 @@
  358211 Get New Headers expands selected collapsed thread (Douglas Bollinger)
  359171 download files with same name -> mangled suffixes (Jerry Segers, Jr.)
  361144 xover tasks should be inserted at the top of the queue (David)
+ 360373 missing utf8 conversion in error messages (Frederic Crozat)
+ 360725 changing the default color of positive scores (Anthony DeRobertis)
 
 0.115 "Tip Jar"
  358077 cut memory use in half for large binaries groups (Charles)
